# polyglot_ls

./: Cargo.toml  README.md  TUTORIAL.md
.github/: demo.tape  document.py
.github/workflows/: build_test.yml
config/: server_config.yaml
config/code_actions/: python.yaml  rust.yaml
config/code_actions/__all__/: answer.lua  wording.lua
config/code_actions/gitcommit/: enhance.lua
config/code_actions/go/: doc_string.lua
config/code_actions/markdown/: answer.lua
config/code_actions/python/: enhance.lua  func_args_annotations.lua  func_doc_string.lua  func_doc_string_in_class.lua  implement.lua  simple.yaml  sugget_varname.lua
config/code_actions/rust/: add_test_case.lua  doc_string.lua  simple.yaml
config/code_actions/text/: answer.lua
editor_integrations/nvim/nvim-config/: init.lua  lazy-lock.json
editor_integrations/nvim/nvim-config/lua/patwie/: init.lua  lazy_init.lua
editor_integrations/nvim/nvim-config/lua/patwie/lazy/: lsp.lua
src/: configuration.rs  main.rs  nonsense.rs  server.rs
src/code_action_providers/: config.rs  generic.rs  helper.rs  lua_jit.rs  lua_provider.rs  mod.rs  parsed_document.rs  traits.rs  yaml_provider.rs
src/code_action_providers/lua/: bindings.rs  mod.rs  provider.rs
src/code_action_providers/python/: class_docstring.rs  comment.rs  function_args.rs  function_docstring.rs  mod.rs
src/code_action_providers/yaml/: provider.rs
src/llm_handlers/: bedrock.rs  mock.rs  mod.rs  traits.rs
src/prompt_handlers/: bedrock.rs  claude.rs  mock.rs  mod.rs  traits.rs
tests/: run_all.sh
tests/cases/Polyglot: Update Function Args Type Annotations/: simple.2.2.py.want
tests/cases/Polyglot: Update Function Docstring/: simple.2.2.py.want
