[package]
name = "polyglot_ls"
version = "0.1.0"
edition = "2021"

[features]
runtime-agnostic = ["async-codec-lite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
async-tungstenite = "0.27.0"
aws-config = "1.5.4"
aws-sdk-bedrockruntime = "1.42.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = "1.0.204"
serde_json = "1.0.121"
serde_yaml = "0.9.34"
tokio = {version="1.39.2", features=["full"]}
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
ws_stream_tungstenite = "0.13.0"
async-codec-lite = { version = "0.0", optional = true }
